force-app/main/default/objects/ca2cq_Zone_community__c/ca2cq_Zone_community__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds mapping between original Zone id and final community Id</description>
    <label>Zone to Community</label>
</CustomObject>