force-app/main/default/objects/ca2cq_Zone_community__c/fields/Active_for_Migration__c.field-meta.xml
<CustomField>
    <fullName>Active_for_Migration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active for Migration</label>
    <type>Checkbox</type>
</CustomField>