force-app/main/default/objects/ca2cq_Zone_community__c/fields/Community_Id__c.field-meta.xml
<CustomField>
    <fullName>Community_Id__c</fullName>
    <description>Id of the community that will host new Question Feeds</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Id of the community that will host new Question Feeds</inlineHelpText>
    <label>Community Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>