force-app/main/default/objects/ca2cq_Zone_community__c/fields/zoneId__c.field-meta.xml
<CustomField>
    <fullName>zoneId__c</fullName>
    <description>ID of the original Chatter Answers Zone</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ID of the original Chatter Answers Zone</inlineHelpText>
    <label>Original Chatter Zone Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>